# docx2msg

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt
src/docx2msg/: __init__.py  mail_props.py
