[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "docx2msg"
authors = [{name = "Algebra-FUN", email = "algebra-fun@outlook.com"}]
description = "Convert a docx to an Outlook Mail-Item."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["convert", "docx", "msg", "outlook","mail"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
]
dynamic = ["version"]
