[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx2msg"
version = "0.1.2"
authors = [{name = "Algebra-FUN", email = "algebra-fun@outlook.com"}]
description = "Convert a docx to an Outlook Mail-Item."
readme = "README.md"
license = {text = "MIT"}
keywords = ["convert", "docx", "msg", "outlook","mail"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml",
    "python-docx",
    "docxtpl",
    "pywin32",
    "beautifulsoup4"
]

[project.urls]
Repository = "https://github.com/Algebra-FUN/docx2msg"
Homepage = "https://github.com/Algebra-FUN/docx2msg"